# Markdown_Parser

./: .gitignore  .gitmodules  CMakeLists.txt  PROGRESS.md  Package.swift  README.md  README_CN.md  RULES.md  build.sh
bindings/android/: CMakeLists.txt  MkParser.kt  mk_jni.c
bindings/android/lib/: CMakeLists.txt  build.gradle.kts  settings.gradle.kts
bindings/android/lib/src/main/kotlin/com/mkparser/: MkBlock.kt  MkBlockAdapter.kt  MkBlockParser.kt  MkBlockStyle.kt  MkParser.kt
bindings/ios/: CMakeLists.txt  MkParser.swift  build_xcframework.sh
bindings/ios/Tests/: MkParserTests.swift
bindings/js/: .npmignore  README.md  mk_parser_cjs.cjs  mk_parser_wasm.js  package.json  types.d.ts  types.ts
bindings/node/: CMakeLists.txt  binding.gyp  index.js  mk_napi.c  mk_parser.pc.in  package.json
bindings/wasm/: CMakeLists.txt  mk_wasm.c  mk_wasm_api.js
cmake/: options.cmake
cmake/toolchains/: android.cmake  ios.cmake  wasm.cmake
demo/android/: README.md  README_CN.md  local.properties  settings.gradle.kts
demo/android/app/: build.gradle.kts
demo/android/app/src/main/: AndroidManifest.xml
demo/android/app/src/main/assets/web/: index.html
demo/android/app/src/main/cpp/: CMakeLists.txt  mk_jni.c
demo/android/app/src/main/cpp/mk_parser/src/: arena.c  ast.h  block.h  getters.c  inline_parser.h  parser.c  plugin.c  plugin.h
demo/android/app/src/main/kotlin/com/mkparser/: MkParser.kt
demo/android/app/src/main/kotlin/com/mkparser/demo/: MainActivity.kt  MkDemoViewModel.kt
demo/android/app/src/main/kotlin/com/mkparser/demo/llm/: LlmProvider.kt  MockProvider.kt  OpenAiProvider.kt
demo/android/app/src/main/kotlin/com/mkparser/demo/ui/: EventsPanel.kt  LlmPanel.kt  MainScreen.kt  WebPreviewPanel.kt
demo/android/app/src/main/kotlin/com/mkparser/demo/ui/render/: MkBlock.kt  MkBlockParser.kt  MkRenderPanel.kt
demo/android/app/src/main/kotlin/com/mkparser/demo/ui/theme/: Theme.kt
demo/android/app/src/main/res/values/: strings.xml  themes.xml
demo/android/gradle/: libs.versions.toml
demo/ios/: Package.swift  README.md  README_CN.md
demo/ios/App/: ContentView.swift  DemoViewModel.swift  EventsView.swift  MkParserDemoApp.swift
demo/ios/App/llm/: LlmProvider.swift  MockProvider.swift  OpenAIProvider.swift
demo/ios/App/render/: MkBlock.swift  MkBlockParser.swift  MkRenderView.swift
demo/web/: index.html
docs/: AGENT_CONTEXT.md  ARCHITECTURE.md  FIXES.md  HANDOFF_GPT.md
docs/qa/: 01_project_framing.md  02_requirements.md  03_technical_decisions.md  04_parser_architecture.md  05_ast_and_memory.md  06_plugin_and_bindings.md  07_scope_confirmation.md
include/: mk_parser.h  module.modulemap
src/: arena.h  ast.c  block.c  block.h  inline_parser.c  parser.c  plugin.c
tests/: CMakeLists.txt  bench_parser.c  smoke.c  test_m6.c  test_m7.c
tests/integration/: test_streaming.c
tests/spec/: mk_html.c  mk_html.h  spec.json  test_spec.c
tests/unit/: test_arena.c  test_ast.c  test_block.c  test_inline.c
